# notecards

./: Cargo.toml  Makefile  index.html
src/: lib.rs  midi.rs  utils.rs
