[package]
name = "notecards"
version = "0.1.0"
edition = "2024"
authors = ["Kaveh <kaveh@riseup.net>"]
repository = "https://github.com/hamidrezakp/notecards"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "= 1.0.100"
midir = "= 0.10.3"
midly = "= 0.5.3"
wasm-bindgen = "= 0.2.106"
wasm-bindgen-futures = "= 0.4.56"
web-sys = { version = "= 0.3.83", features = ["console", "Window"] } 

[lib]
crate-type = ["cdylib"]
